--- a/style.css
+++ b/style.css
@@ -28,8 +28,16 @@ h1 {
   font-family: 'Cabin', sans-serif !important;
 }
 
-.carousel-item {
+a {
+  text-decoration: none !important;
+  color: var(--dark-text-colors) !important;
+}
+
+.carousel-inner {
   background-color: var(--light-secondary-colors);
+}
+
+.carousel-item {
   position: relative;
   height: 512px;
 }
@@ -64,6 +72,27 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.top-bar button {
+  background-color: transparent;
+  border: none;
+  display: none;
+}
+
+.top-bar button:hover {
+  cursor: pointer;
+}
+
+.side-bar {
+  width: 100%;
+  background: #000;
+  position: relative;
+  z-index: 100px;
+}
+
+button:focus {
+  outline: none !important;
 }
 
 .top-bar ul {
@@ -172,28 +201,28 @@ input:checked+.slider:before {
   height: 283px;
 }
 
-.main__fareje{
+.main__fareje {
   display: flex;
   flex-direction: column;
 
   background-color: var(--light-bg);
 }
 
-.main__fareje h1{
+.main__fareje h1 {
   font-family: 'Inter', sans-serif;
   font-weight: 700;
-  
-  color:#000000;
+
+  color: #000000;
 
 }
 
-.main__fareje-content{
+.main__fareje-content {
   display: flex;
   flex-direction: row;
   gap: 64px;
 }
 
-.divider{
+.divider {
   width: 100%;
   height: 256px;
   display: flex;
@@ -203,25 +232,38 @@ input:checked+.slider:before {
 
 }
 
-.divider div{
+.divider div {
   display: flex;
   align-items: center;
 }
 
-.divider-content{
-  
-  gap: 4.270833333333333vw; /* Eu */
-  
+.divider-content {
+
+  gap: 4.270833333333333vw;
+  /* Eu */
+
 }
 
-.dog-img{
-  margin:0 4.270833333333333vw; /* Eu */
+.dog-img {
+  margin: 0 4.270833333333333vw;
+  /* Eu */
   justify-content: space-between;
 }
 
 
 .linha {
-  width: 13.229166666666666vw; /* Eu */
+  width: 13.229166666666666vw;
+  /* Eu */
   border-bottom: 2px solid #ffffff;
 }
 
+@media (max-width: 768px) {
+  .top-bar button {
+    display: block;
+  }
+
+  .top-bar ul,
+  .top-bar label {
+    display: none;
+  }
+}
