--- a/style.css
+++ b/style.css
@@ -86,9 +86,24 @@ a {
 
 .side-bar {
   width: 100%;
-  background: #000;
-  position: relative;
-  z-index: 100px;
+  margin-top: 64px;
+  background: #00000070;
+  position: fixed;
+  display: none;
+  justify-content: flex-end;
+  z-index: 100;
+  top: 0;
+}
+
+.show-sidebar {
+  display: flex !important;
+}
+
+.w-sb {
+  width: 86%;
+  height: 100%;
+  height: 9999px;
+  background-color: var(--light-primary-colors);
 }
 
 button:focus {
