--- a/style.css
+++ b/style.css
@@ -391,25 +391,24 @@ input:checked+.slider:before {
   .top-bar label {
     display: none;
   }
-<<<<<<< HEAD
 }
 
 
 /* Footer de iago.com */
 
-footer{
+footer {
   background-color: #CC9AE8;
   display: flex !important;
   align-items: center;
   justify-content: center;
 }
 
-.rodape{
+.rodape {
   display: flex;
   flex-direction: row;
 }
 
-.cotato-info{
+.cotato-info {
   width: 100%;
   margin-left: 80px;
   display: flex;
@@ -417,15 +416,15 @@ footer{
   flex-direction: column;
 }
 
-.cotato-info h2{
+.cotato-info h2 {
   font-size: 16px;
 }
 
-.cotato-info img{
+.cotato-info img {
   margin-bottom: 8px;
 }
 
-.formulario{
+.formulario {
   width: 100%;
   padding: 40px 30px;
   display: flex;
@@ -433,21 +432,22 @@ footer{
   align-items: center;
 }
 
-.formulario h1{
+.formulario h1 {
   font-weight: bold;
   font-size: 2rem;
   color: white;
   padding: 0;
 }
 
-.formulario input, .formulario textarea{
+.formulario input,
+.formulario textarea {
   width: 550px;
   border-radius: 3px;
   background: #EDF5F4;
   box-shadow: 0px -1px 0px 0px #484747 inset;
 }
 
-form{
+form {
   max-width: 700px;
   margin: 10px 40px;
   display: flex;
@@ -455,7 +455,8 @@ form{
   gap: 10px;
 }
 
-form input, form textarea{
+form input,
+form textarea {
   display: flex;
   width: 620px;
   padding: 12px 222px 13px 12px;
@@ -468,12 +469,12 @@ form input, form textarea{
   font-size: 13px;
 }
 
-form textarea{
+form textarea {
   resize: none;
   max-height: 420px;
 }
 
-form .botao-enviar{
+form .botao-enviar {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -481,7 +482,7 @@ form .botao-enviar{
   text-align: center;
 }
 
-form .botao-enviar input{
+form .botao-enviar input {
   color: rgb(255, 255, 255);
   cursor: pointer;
   display: flex;
@@ -493,12 +494,12 @@ form .botao-enviar input{
   flex-shrink: 0;
   transition: .2s;
 
- border-radius: 2px;
- background: #52057B;
- box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  background: #52057B;
+  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
-div h3{
+div h3 {
   color: #FFF;
   font-family: 'Outfit', sans-serif;
   font-size: 18px;
@@ -507,7 +508,7 @@ div h3{
   padding: 0;
 }
 
-.cotato-info h2{
+.cotato-info h2 {
   margin: 24px 0px 12px 0px;
   color: #FFF;
   font-family: Cabin;
@@ -517,18 +518,6 @@ div h3{
   line-height: normal;
 }
 
-.cotato-info h2 img{
+.cotato-info h2 img {
   margin-right: 10px;
 }
-
-
-
-=======
-
-  .main__sobre-nos {
-    display: flex;
-    flex-direction: column;
-    gap: 64px;
-  }
-}
->>>>>>> 330c6867efd62509071346188d61d41af70d33fb
