--- a/style.css
+++ b/style.css
@@ -360,6 +360,8 @@ input:checked+.slider:before {
   gap: 64px;
 }
 
+/* Divider */ 
+
 .divider {
   width: 100%;
   height: 256px;
@@ -382,12 +384,12 @@ input:checked+.slider:before {
 }
 
 .dog-img {
-  height: 50%;
+  height: 50vw;
   max-height: 200px;
 }
 
 .linha {
-  width: 100vw;
+  width: 100vw !important;
   max-width: 254px;
   border-bottom: 2px solid #ffffff;
 }
@@ -585,6 +587,29 @@ div label {
     height: 50%;
   }
 
+ /* Divider */
+ .divider{
+  height: 30vw;
+}
+
+.patinha-img{
+  width: 6vw !important;
+}
+
+.dog-img{
+  width: 25vw !important;
+}
+
+.linha{
+  height: 1vw !important;
+  width: 50% !important;
+  margin: 0 3vw !important;
+}
+
+/* Divider END*
+
+
+  /* FAREJENOS */
   .main__fareje-content {
     display: flex;
     flex-direction: column;
@@ -599,6 +624,8 @@ div label {
   .main_faixada {
     display: none;
   }
+/* FAREJENOS END*/
+
 
   /* FOOOTER*/
   .rodape {
@@ -625,7 +652,7 @@ div label {
   }
 
   .cotato-info.copyright{
-    text-align: start !important;
+  
   }
 
   .formulario{
@@ -633,6 +660,38 @@ div label {
   }
 
 
-  /* FOOOTER*/
+  /* FOOOTER END */
 
+}
+
+@media (max-width: 400px) {
+/*FOOTER*/
+.cotato-info{
+  text-align: center !important;
+}
+
+.cotato-info h2{
+  font-size: 100%;
+}
+
+.cotato-info h2 img {
+  width: 7%;
+}
+
+.logo {
+ width: 50%; 
+  margin: 0 auto !important;
+} 
+
+.cotato-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.cotato-info.copyright{
+
+}
+
+/*FOOTER END*/
 }
